--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -37,6 +37,9 @@
 	</section>
 	<section id="portfolio">
 		<h2>Mes Projets</h2>
+		<div class="category-filters" id="category-filters">
+			<button type="submit" class="filters filter_selected" id="filterAll">Tous</button>
+		</div>
 		<div class="gallery"></div>
 	</section>
 	<section id="contact">
