Transformation logout quand connecté + script
Transformation login/logout quand déconnecté/connecté + ajout script editmode.JS dans index

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -10,6 +10,7 @@
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/style.css">
 	<script src="script.js"></script>
+	<script src="editmode.js"></script>
 </head>
 <body>
 <header>
@@ -38,7 +39,7 @@
 	<section id="portfolio">
 		<h2>Mes Projets</h2>
 		<div class="category-filters" id="category-filters">
-			<button type="submit" class="filters filter_selected" id="filterAll">Tous</button>
+			<button type="submit" class="filters filter_selected" id="filterAll" value="Tous">Tous</button>
 		</div>
 		<div class="gallery"></div>
 	</section>
