--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -7,6 +7,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/style.css">
 	<script src="script.js"></script>
@@ -16,7 +17,7 @@
 <header>
 	<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
 	<nav>
-		<ul id="spaceBannerUl">
+		<ul>
 			<li><a href="#portfolio">projets</a></li>
 			<li><a href="#contact">contact</a></li>
 			<li id="auth-link"><a href="login.html">login</a></li>
@@ -41,7 +42,7 @@
 		<div class="category-filters" id="category-filters">
 			<button type="submit" class="filters filter_selected" id="filterAll" value="Tous">Tous</button>
 		</div>
-		<div class="gallery"></div>
+		<div class="gallery" id="gallery"></div>
 	</section>
 	<section id="contact">
 		<h2>Contact</h2>
