--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -9,7 +9,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/style.css">
-	<script src="login.js"></script>
+	<script src="login.js" defer></script>
 </head>
 <body>
 <header>
@@ -40,7 +40,7 @@
 <footer>
 	<nav>
 		<ul>
-			<li>Mentions Légales</li>
+			<li>Mentions légales</li>
 		</ul>
 	</nav>
 </footer>
